--- a/resources/assets/sass/mixins/_text-emphasis.scss
+++ b/resources/assets/sass/mixins/_text-emphasis.scss
@@ -1,6 +1,6 @@
 // Typography
 
-@mixin text-emphasis-variant($parent, $color) { 
+@mixin text-color-variant($parent, $color) { 
   &#{$parent} {
     color: $color !important;
   }
