--- a/resources/assets/sass/components/_type.scss
+++ b/resources/assets/sass/components/_type.scss
@@ -203,22 +203,22 @@ small,
 
 // -- Contextual colors
 
-@include text-emphasis-variant('.text-muted', $text-muted);
+@include text-color-variant('.c--muted', $text-muted);
 
-@include text-emphasis-variant('.text-success', $brand-success);
+@include text-color-variant('.c--success', $brand-success);
 
-@include text-emphasis-variant('.text-info', $brand-info);
+@include text-color-variant('.c--info', $brand-info);
 
-@include text-emphasis-variant('.text-warning', $brand-warning);
+@include text-color-variant('.c--warning', $brand-warning);
 
-@include text-emphasis-variant('.text-danger', $brand-danger);
+@include text-color-variant('.c--danger', $brand-danger);
 
 // Font color
-@include text-emphasis-variant('.text-white', $white );
+@include text-color-variant('.c--white', $white );
 
-@include text-emphasis-variant('.text-primary', $brand-primary);
+@include text-color-variant('.c--primary', $brand-primary);
 
-@include text-emphasis-variant('.text-gray-dark', $gray-dark);
+@include text-color-variant('.c--gray-dark', $gray-dark);
 
 
 //
