--- a/public/css/app.css
+++ b/public/css/app.css
@@ -995,99 +995,36 @@ pre code {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  padding-right: 16px;
-  padding-left: 16px;
+  box-sizing: content-box;
+  padding-right: 32px;
+  padding-left: 32px;
 }
 
 @media (min-width: 576px) {
   .container {
-    padding-right: 16px;
-    padding-left: 16px;
+    padding-right: 8%;
+    padding-left: 8%;
   }
 }
 
 @media (min-width: 768px) {
   .container {
-    padding-right: 16px;
-    padding-left: 16px;
+    padding-right: 9%;
+    padding-left: 9%;
   }
 }
 
 @media (min-width: 992px) {
   .container {
-    padding-right: 16px;
-    padding-left: 16px;
+    padding-right: 10%;
+    padding-left: 10%;
   }
 }
 
 @media (min-width: 1200px) {
   .container {
-    padding-right: 16px;
-    padding-left: 16px;
-  }
-}
-
-@media (min-width: 576px) {
-  .container {
-    width: 540px;
-    max-width: 100%;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    width: 720px;
-    max-width: 100%;
-  }
-}
-
-@media (min-width: 992px) {
-  .container {
-    width: 960px;
-    max-width: 100%;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container {
-    width: 1140px;
-    max-width: 100%;
-  }
-}
-
-.container-fluid {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  padding-right: 16px;
-  padding-left: 16px;
-}
-
-@media (min-width: 576px) {
-  .container-fluid {
-    padding-right: 16px;
-    padding-left: 16px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container-fluid {
-    padding-right: 16px;
-    padding-left: 16px;
-  }
-}
-
-@media (min-width: 992px) {
-  .container-fluid {
-    padding-right: 16px;
-    padding-left: 16px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container-fluid {
-    padding-right: 16px;
-    padding-left: 16px;
+    padding-right: 11%;
+    padding-left: 11%;
   }
 }
 
@@ -2157,6 +2094,30 @@ pre code {
   .offset--\@xl-11 {
     margin-left: 91.6666666667%;
   }
+}
+
+.-max--sm {
+  max-width: 540px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.-max--md {
+  max-width: 720px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.-max--lg {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.-max--xl {
+  max-width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .table {
