--- a/resources/assets/sass/utilities/_flex.scss
+++ b/resources/assets/sass/utilities/_flex.scss
@@ -6,43 +6,43 @@
   @include media-breakpoint-up($breakpoint) {
     $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 
-    .flex#{$infix}-first     { order: -1; }
-    .flex#{$infix}-last      { order: 1; }
-    .flex#{$infix}-unordered { order: 0; }
+    .-flex--first#{$infix}     { order: -1; }
+    .-flex--last#{$infix}      { order: 1; }
+    .-flex-unordered#{$infix} { order: 0; }
 
-    .flex#{$infix}-row            { flex-direction: row !important; }
-    .flex#{$infix}-column         { flex-direction: column !important; }
-    .flex#{$infix}-row-reverse    { flex-direction: row-reverse !important; }
-    .flex#{$infix}-column-reverse { flex-direction: column-reverse !important; }
+    .-flex--row#{$infix}            { flex-direction: row !important; }
+    .-flex--col#{$infix}         { flex-direction: column !important; }
+    .-flex--row-rev#{$infix}    { flex-direction: row-reverse !important; }
+    .-flex--col-rev#{$infix} { flex-direction: column-reverse !important; }
 
-    .flex#{$infix}-wrap         { flex-wrap: wrap !important; }
-    .flex#{$infix}-nowrap       { flex-wrap: nowrap !important; }
-    .flex#{$infix}-wrap-reverse { flex-wrap: wrap-reverse !important; }
+    .-flex--wrap#{$infix}         { flex-wrap: wrap !important; }
+    .-flex--nowrap#{$infix}       { flex-wrap: nowrap !important; }
+    .-flex--wrap-rev#{$infix} { flex-wrap: wrap-reverse !important; }
 
-    .justify-content#{$infix}-start   { justify-content: flex-start !important; }
-    .justify-content#{$infix}-end     { justify-content: flex-end !important; }
-    .justify-content#{$infix}-center  { justify-content: center !important; }
-    .justify-content#{$infix}-between { justify-content: space-between !important; }
-    .justify-content#{$infix}-around  { justify-content: space-around !important; }
+    .-justify-content--start#{$infix}   { justify-content: flex-start !important; }
+    .-justify-content--end#{$infix}     { justify-content: flex-end !important; }
+    .-justify-content--center#{$infix}  { justify-content: center !important; }
+    .-justify-content--between#{$infix} { justify-content: space-between !important; }
+    .-justify-content--around#{$infix}  { justify-content: space-around !important; }
 
-    .align-items#{$infix}-start    { align-items: flex-start !important; }
-    .align-items#{$infix}-end      { align-items: flex-end !important; }
-    .align-items#{$infix}-center   { align-items: center !important; }
-    .align-items#{$infix}-baseline { align-items: baseline !important; }
-    .align-items#{$infix}-stretch  { align-items: stretch !important; }
+    .-align-items--start#{$infix}   { align-items: flex-start !important; }
+    .-align-items--end#{$infix}      { align-items: flex-end !important; }
+    .-align-items--center#{$infix}   { align-items: center !important; }
+    .-align-items--baseline#{$infix} { align-items: baseline !important; }
+    .-align-items--stretch#{$infix}  { align-items: stretch !important; }
 
-    .align-content#{$infix}-start   { align-content: flex-start !important; }
-    .align-content#{$infix}-end     { align-content: flex-end !important; }
-    .align-content#{$infix}-center  { align-content: center !important; }
-    .align-content#{$infix}-between { align-content: space-between !important; }
-    .align-content#{$infix}-around  { align-content: space-around !important; }
-    .align-content#{$infix}-stretch { align-content: stretch !important; }
+    .-align-content--start#{$infix}   { align-content: flex-start !important; }
+    .-align-content--end#{$infix}     { align-content: flex-end !important; }
+    .-align-content--center#{$infix}  { align-content: center !important; }
+    .-align-content--between#{$infix} { align-content: space-between !important; }
+    .-align-content--around#{$infix}  { align-content: space-around !important; }
+    .-align-content--stretch#{$infix} { align-content: stretch !important; }
 
-    .align-self#{$infix}-auto     { align-self: auto !important; }
-    .align-self#{$infix}-start    { align-self: flex-start !important; }
-    .align-self#{$infix}-end      { align-self: flex-end !important; }
-    .align-self#{$infix}-center   { align-self: center !important; }
-    .align-self#{$infix}-baseline { align-self: baseline !important; }
-    .align-self#{$infix}-stretch  { align-self: stretch !important; }
+    .-align-self--auto#{$infix}     { align-self: auto !important; }
+    .-align-self--start#{$infix}    { align-self: flex-start !important; }
+    .-align-self--end#{$infix}      { align-self: flex-end !important; }
+    .-align-self--center#{$infix}   { align-self: center !important; }
+    .-align-self--baseline#{$infix} { align-self: baseline !important; }
+    .-align-self--stretch#{$infix}  { align-self: stretch !important; }
   }
 }
