--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,3 +14,10 @@
 
 // Utility classes
 @import "utilities/utilities";
+
+@import "pages/_pages";
+
+
+html {
+ -webkit-font-smoothing: antialiased;
+}
