--- a/resources/assets/sass/components/components.scss
+++ b/resources/assets/sass/components/components.scss
@@ -18,6 +18,7 @@
 @import "transitions";
 @import "dropdown";
 @import "button-group";
+@import "icons";
 @import "input-group";
 @import "custom-forms";
 @import "nav";
