--- a/resources/assets/sass/mixins/_grid-framework.scss
+++ b/resources/assets/sass/mixins/_grid-framework.scss
@@ -47,7 +47,7 @@
 
       @each $modifier in (pull, push) {
         @for $i from 0 through $columns {
-          .-#{$modifier}#{$infix}-#{$i} {
+          .-#{$modifier}-#{$i}#{$infix} {
             @include make-col-modifier($modifier, $i, $columns)
           }
         }
@@ -56,7 +56,7 @@
       // `$columns - 1` because offsetting by the width of an entire row isn't possible
       @for $i from 0 through ($columns - 1) {
         @if not ($infix == "" and $i == 0) { // Avoid emitting useless .offset-xs-0
-          .-offset#{$infix}-#{$i} {
+          .-offset-#{$i}#{$infix} {
             @include make-col-modifier(offset, $i, $columns)
           }
         }
