--- a/resources/assets/sass/components/_modal.scss
+++ b/resources/assets/sass/components/_modal.scss
@@ -1,3 +1,36 @@
+
+// Modals
+
+// Padding applied to the modal body
+$modal-inner-padding:         15px !default;
+
+$modal-dialog-margin:         10px !default;
+$modal-dialog-sm-up-margin-y: 32px !default;
+
+$modal-title-line-height:     $line-height-base !default;
+
+$modal-content-bg:               $white !default;
+$modal-content-border-color:     transparent;
+$modal-content-border-width:     0;
+$modal-content-xs-box-shadow:    0 3px 9px rgba($black,.5);
+$modal-content-sm-up-box-shadow: 0 25px 60px -35px rgba($black, .3);
+
+$modal-backdrop-bg:           $black !default;
+$modal-backdrop-opacity:      .5 !default;
+$modal-header-border-color:   $gray-lighter !default;
+$modal-footer-border-color:   $modal-header-border-color !default;
+$modal-header-border-width:   $modal-content-border-width !default;
+$modal-footer-border-width:   $modal-header-border-width !default;
+$modal-header-padding:        15px !default;
+
+$modal-lg:                    800px !default;
+$modal-md:                    500px !default;
+$modal-sm:                    300px !default;
+
+$modal-transition:            transform .3s ease-out !default;
+
+
+
 // .modal-open      - body class for killing the scroll
 // .modal           - container to scroll within
 // .modal-dialog    - positioning shell for the actual modal
@@ -26,27 +59,84 @@
   // gnarly iOS Safari bug: https://bugs.webkit.org/show_bug.cgi?id=158342
   // See also https://github.com/twbs/bootstrap/issues/17695
 
+  padding: 0 $grid-gutter-width-base;
+
   // When fading in the modal, animate it to slide down
-  &.fade .modal-dialog {
+  &.fade .modal__dialog {
     @include transition($modal-transition);
     transform: translate(0, -25%);
   }
-  &.show .modal-dialog { transform: translate(0, 0); }
+  &.show .modal__dialog { transform: translate(0, 0); }
 }
+
+.modal--centered {
+  text-align: center;
+  white-space: nowrap;
+
+  &:before {
+    content: '';
+    height: 100%;
+    width: 0px;
+    display: inline-block;
+    vertical-align: middle;
+    pointer-events: none;
+  }
+  .modal__dialog {
+    vertical-align: middle;
+    text-align: left;
+    display: inline-block;
+  }
+}
+
 .modal-open .modal {
   overflow-x: hidden;
   overflow-y: auto;
 }
 
 // Shell div to position the modal with bottom padding
-.modal-dialog {
+.modal__dialog {
   position: relative;
-  width: auto;
-  margin: $modal-dialog-margin;
+  width: 100%;
+  min-width: 320px;
+  margin: $modal-dialog-margin auto;
+  white-space: normal;
+
+  .close {
+    position: absolute;;
+    // right: -$modal-inner-padding;
+    // top: -$modal-inner-padding;
+    right: 0;
+    top: 0;
+    margin: .25rem;
+    color: $gray-light;
+    outline: none;
+    transform: scale(1);
+    transition: all 150ms 0ms;
+    border-radius: 50%;
+
+
+    // &:after {
+    //   display: inline-block;
+    //   text-align: center;
+    //   line-height: 18px;
+    //   width: 20px;
+    //   height: 20px;
+    //   border-radius: 50%;
+    // }
+
+    &:hover {
+      transform: scale(1.3);
+      background-color: $gray-lighter;
+
+      // &:after {
+      //   background-color: $gray-lighter;
+      // }
+    }
+  }
 }
 
 // Actual modal
-.modal-content {
+.modal__content {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -60,7 +150,7 @@
 }
 
 // Modal background
-.modal-backdrop {
+.modal__backdrop {
   position: fixed;
   top: 0;
   right: 0;
@@ -76,7 +166,7 @@
 
 // Modal header
 // Top section of the modal w/ title and dismiss
-.modal-header {
+.modal__header {
   display: flex;
   align-items: center; // vertically center it
   justify-content: space-between; // Put modal header elements (title and dismiss) on opposite ends
@@ -85,14 +175,14 @@
 }
 
 // Title text within header
-.modal-title {
+.modal__title {
   margin-bottom: 0;
   line-height: $modal-title-line-height;
 }
 
 // Modal body
 // Where all modal content resides (sibling of .modal-header and .modal-footer)
-.modal-body {
+.modal__body {
   position: relative;
   // Enable `flex-grow: 1` so that the body take up as much space as possible
   // when should there be a fixed height on `.modal-dialog`.
@@ -101,7 +191,7 @@
 }
 
 // Footer (for actions)
-.modal-footer {
+.modal__footer {
   display: flex;
   align-items: center; // vertically center
   justify-content: flex-end; // Right align buttons with flex property because text-align doesn't work on flex items
@@ -125,18 +215,18 @@
 // Scale up the modal
 @include media-breakpoint-up(sm) {
   // Automatically set modal's width for larger viewports
-  .modal-dialog {
-    max-width: $modal-md;
+  .modal__dialog {
+    // max-width: $modal-md;
     margin: $modal-dialog-sm-up-margin-y auto;
   }
 
-  .modal-content {
+  .modal__content {
     @include box-shadow($modal-content-sm-up-box-shadow);
   }
 
-  .modal-sm { max-width: $modal-sm; }
+  .modal--sm { max-width: $modal-sm; }
 }
 
 @include media-breakpoint-up(lg) {
-  .modal-lg { max-width: $modal-lg; }
+  .modal--lg { max-width: $modal-lg; }
 }
