--- a/resources/assets/sass/globals/_variables.scss
+++ b/resources/assets/sass/globals/_variables.scss
@@ -92,28 +92,37 @@
 // Grayscale and brand colors for use across Bootstrap.
 
 // Start with assigning color names to specific hex values.
-$white:  #fff !default;
-$black:  #000 !default;
-$red:    #d9534f !default;
-$orange: #f0ad4e !default;
-$yellow: #ffd500 !default;
-$green:  #5cb85c !default;
-$blue:   #0275d8 !default;
-$teal:   #5bc0de !default;
-$pink:   #ff5b77 !default;
-$purple: #613d7c !default;
+$white:            #fff !default;
+$black:            #000 !default;
+$red:              #d9534f !default;
+$orange:           #f0ad4e !default;
+$green:            #5cb85c !default;
+$teal:             #5bc0de !default;
+$pink:             #ff5b77 !default;
+$purple:           #613d7c !default;
+
+// Brand Colors
+$lightning:        #ffdd64; // yellow
+$gummy:            #f4725d; // coral
+
+// Blues
+$late-night:       #002e53;
+$grover:           #005596;
+$jazzy:            #2c8ddd;
+$jean-jacket:      #a9daf4;
+$ice-cube:         #eaf8f8;
 
 // Create grayscale
-$gray-dark:                 #292b2c !default;
-$gray:                      #464a4c !default;
-$gray-light:                #636c72 !default;
-$gray-lighter:              #eceeef !default;
-$gray-lightest:             #f7f7f9 !default;
+$gray-dark:        #2b2b2f;
+$gray:             #555555;
+$gray-light:       #9ba0a0;
+$gray-lighter:     #d0d7d7;
+$gray-lightest:    #f3f7f7;
 
 // Reassign color vars to semantic color scheme
-$brand-primary:             #ec7955; //coral
+$brand-primary:             $gummy;
 $brand-success:             $green !default;
-$brand-info:                $teal !default;
+$brand-info:                $jean-jacket;
 $brand-warning:             $orange !default;
 $brand-danger:              $red !default;
 $brand-inverse:             $gray-dark !default;
@@ -124,7 +133,7 @@ $brand-inverse:             $gray-dark !default;
 // Quickly modify global styling by enabling or disabling optional features.
 
 $enable-rounded:            true !default;
-$enable-shadows:            false !default;
+$enable-shadows:            true;
 $enable-gradients:          false !default;
 $enable-transitions:        true !default;
 $enable-hover-media-query:  false !default;
@@ -260,21 +269,21 @@ $container-padding-widths: (
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
-$font-family-serif:      Georgia, "Times New Roman", Times, serif !default;
+$font-family-sans-serif: "soleil", "source-sans-pro", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$font-family-serif: "expo-serif-pro", Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
-$font-family-base:       $font-family-sans-serif !default;
+$font-family-base:       $font-family-serif;
 
 $font-size-base: 1rem !default; // Assumes the browser default, typically `16px`
-$font-size-lg:   1.25rem !default;
-$font-size-sm:   .875rem !default;
-$font-size-xs:   .75rem !default;
+$font-size-lg:   1.125rem !default;
+$font-size-sm:   .875rem;
+$font-size-xs:   typeScale(1) !default;
 
-$font-weight-normal: normal !default;
-$font-weight-bold: bold !default;
+$font-weight-normal: 400 !default;
+$font-weight-bold: 700;
 
 $font-weight-base: $font-weight-normal !default;
-$line-height-base: 1.5 !default;
+$line-height-base: 1.4;
 
 
 $font-size-h1: typeScale(6);
@@ -285,9 +294,9 @@ $font-size-h5: typeScale(2);
 $font-size-h6: typeScale(1);
 
 $headings-margin-bottom: ($spacer * pow($base-ratio, -2)) !default;
-$headings-font-family:   inherit !default;
-$headings-font-weight:   600 !default;
-$headings-line-height:   1 !default;
+$headings-font-family:   $font-family-sans-serif;
+$headings-font-weight:   700;
+$headings-line-height:   1.1;
 $headings-color:         $gray-dark;
 
 $display1-size: typeScale(8);
@@ -302,9 +311,7 @@ $display4-weight:     $headings-font-weight !default;
 $display-line-height: $headings-line-height !default;
 
 $lead-font-size:   typeScale(3) !default;
-$lead-font-weight: 300 !default;
-
-$small-font-size: typeScale(1);
+$lead-font-weight: 400 !default;
 
 $text-muted: $gray-light !default;
 
@@ -803,64 +810,6 @@ $badge-pill-padding-x:        .6em !default;
 $badge-pill-border-radius:    10rem !default;
 
 
-// Modals
-
-// Padding applied to the modal body
-$modal-inner-padding:         15px !default;
-
-$modal-dialog-margin:         10px !default;
-$modal-dialog-sm-up-margin-y: 30px !default;
-
-$modal-title-line-height:     $line-height-base !default;
-
-$modal-content-bg:               $white !default;
-$modal-content-border-color:     rgba($black,.2) !default;
-$modal-content-border-width:     $border-width !default;
-$modal-content-xs-box-shadow:    0 3px 9px rgba($black,.5) !default;
-$modal-content-sm-up-box-shadow: 0 5px 15px rgba($black,.5) !default;
-
-$modal-backdrop-bg:           $black !default;
-$modal-backdrop-opacity:      .5 !default;
-$modal-header-border-color:   $gray-lighter !default;
-$modal-footer-border-color:   $modal-header-border-color !default;
-$modal-header-border-width:   $modal-content-border-width !default;
-$modal-footer-border-width:   $modal-header-border-width !default;
-$modal-header-padding:        15px !default;
-
-$modal-lg:                    800px !default;
-$modal-md:                    500px !default;
-$modal-sm:                    300px !default;
-
-$modal-transition:            transform .3s ease-out !default;
-
-
-// Alerts
-//
-// Define alert colors, border radius, and padding.
-
-$alert-padding-x:             1.25rem !default;
-$alert-padding-y:             .75rem !default;
-$alert-margin-bottom:         $spacer-y !default;
-$alert-border-radius:         $border-radius !default;
-$alert-link-font-weight:      $font-weight-bold !default;
-$alert-border-width:          $border-width !default;
-
-$alert-success-bg:            $state-success-bg !default;
-$alert-success-text:          $state-success-text !default;
-$alert-success-border:        $state-success-border !default;
-
-$alert-info-bg:               $state-info-bg !default;
-$alert-info-text:             $state-info-text !default;
-$alert-info-border:           $state-info-border !default;
-
-$alert-warning-bg:            $state-warning-bg !default;
-$alert-warning-text:          $state-warning-text !default;
-$alert-warning-border:        $state-warning-border !default;
-
-$alert-danger-bg:             $state-danger-bg !default;
-$alert-danger-text:           $state-danger-text !default;
-$alert-danger-border:         $state-danger-border !default;
-
 
 // Progress bars
 
@@ -953,21 +902,13 @@ $carousel-control-next-icon-bg: str-replace(url("data:image/svg+xml;charset=utf8
 $carousel-transition:           transform .6s ease-in-out !default;
 
 
-// Close
-
-$close-font-size:             $font-size-base * 1.5 !default;
-$close-font-weight:           $font-weight-bold !default;
-$close-color:                 $black !default;
-$close-text-shadow:           0 1px 0 $white !default;
-
-
 // Code
 
 $code-font-size:              .6rem;
 $code-padding-x:              .4rem;
 $code-padding-y:              .2rem;
-$code-color:                  $brand-primary;
-$code-bg:                     $gray-lighter;
+$code-color:                  $jazzy;
+$code-bg:                     $ice-cube;
 
 $kbd-color:                   $white !default;
 $kbd-bg:                      $gray-dark !default;
