--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,6 +15,10 @@
 // Utility classes
 @import "utilities/utilities";
 
+// partials
+@import "partials/partials";
+
+// Page specific styles
 @import "pages/_pages";
 
 
