--- a/resources/assets/sass/pages/resume.scss
+++ b/resources/assets/sass/pages/resume.scss
@@ -18,6 +18,7 @@
 //
 
 .resume__editor {
+  position: relative;
   min-width: 0px;
   width: 0px;
   max-width: 0px;
@@ -32,22 +33,23 @@
 }
 
 
-
-.resume__editor__content, .resume__editor__header, .resume__editor__footer {
-  flex: 0 1;
-  width: 100%;
+.editor__header, .editor__footer {
   min-width: 400px;
-  transform: translatex(-100px);
-  transition: all 850ms 0ms ease;
 }
+
 
 // Editor Header
 
-.resume__editor__header {
+.editor__header {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
   text-align: center;
   padding: 32px;
+  z-index: 5;
 
-  .editor__section {
+  .editor__phase-heading {
     color: $jazzy;
   }
 
@@ -56,7 +58,7 @@
     border-color: $jean-jacket;
   }
 
-  .editor__section__dots {
+  .editor__phase__dots {
     margin-top: 24px;
     margin-bottom: 24px;
     text-align: center;
@@ -73,7 +75,7 @@
       font-size: $font-size-sm;
       line-height: 32px;
       font-weight: 700;
-      color: $jean-jacket;
+      color: $jazzy;
       vertical-align: middle;
       cursor: pointer;
       transition: all 150ms;
@@ -91,8 +93,6 @@
       }
 
       &:hover {
-        color: $jazzy;
-
         &:after {
           background-color: fade-out($jean-jacket, .75);
         }
@@ -107,6 +107,15 @@
           width: 32px;
           height: 32px;
           background-color: $gummy;
+        }
+      }
+
+      &.-disabled {
+        color: $jean-jacket;
+        cursor: default;
+
+        &:after {
+          content: none;
         }
       }
     }
@@ -124,305 +133,29 @@
       border-radius: 0px 3px 3px 0px;
       height: 6px;
       transition: width 850ms;
+      width: 100%;
     }
   }
 }
 
-.resume__editor__footer {
+.editor__footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
   padding: 16px;
-  height: 68px;
   text-align: center;
-
-  .editor__back-btn, .editor__next-btn {
-    display: inline-block;
-    height: 36px;
-    width: 36px;
-    border-radius: 36px;
-    background-color: $jean-jacket;
-    color: $white;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-family: $font-family-sans-serif;
-    line-height: 36px;
-    vertical-align: middle;
-    font-size: $font-size-sm;
-    font-weight: 700;
-    text-align: center;
-    letter-spacing: .05em;
-    border: 1px solid $jean-jacket;
-    overflow: hidden;
-    // padding: 0 9px;
-
-
-    &:hover {
-      background-color: $jazzy;
-    }
-
-    .i--arrow {
-      display: inline;
-      background : {
-        position: center right;
-        repeat: no-repeat;
-        size: auto 8px;
-      }
-
-      text-align: center;
-      display: inline-block;
-      width: 16px;
-      height: 10px;
-      overflow: hidden;
-      line-height: inherit;
-      margin: 0 9px;
-
-      transition: all 350ms;
-    }
-  }
-
-  .editor__back-btn {
-    // float: left;
-
-    .i--arrow {
-      background-image: url('../../img/UI/arrow-left-lighter.svg');
-      background-position: center left;
-    }
-  }
-
-  .editor__next-btn {
-    // float: right;
-    text-align: right;
-    white-space: nowrap;
-    overflow: hidden;
-    direction: rtl;
-    text-align: center;
-
-    .i--arrow {
-      background-image: url('../../img/UI/arrow-left-lighter.svg');
-      background-position: center right;
-    }
-
-    &.-closing {
-      animation: next-btn-close 650ms;
-    }
-
-
-    &:after {
-      content: 'next';
-      position: relative;
-      display: inline-block;
-      opacity: 0;
-      top: 36px;
-      transition: opacity 300ms 300ms, top 0ms 600ms;
-    }
-
-    &.-disabled {
-      background-color: transparent;
-      cursor: default;
-
-      .i--arrow {
-        background-image: url('../../img/UI/arrow-right-light.svg');
-        transition: width 200ms 350ms, background 200ms 350ms, margin 200ms;
-      }
-    }
-
-    &.-active {
-      line-height: 46px;
-      height: 46px;
-      width: 250px;
-      border-radius: 46px;
-      background-color: $jazzy;
-      margin-top: -5px;
-      margin-right: -5px;
-
-      animation: next-btn-active 650ms normal;
-
-      .i--arrow {
-        background-image: url('../../img/UI/arrow-right-lighter.svg');
-        transition: width 350ms 300ms, background 200ms, margin 200ms;
-        width: 36px;
-      }
-
-      &:hover {
-        background-color: $grover;
-        .i--arrow {
-          width: 48px;
-          transition: width 250ms;
-        }
-      }
-
-      &:after {
-        top: 0;
-        opacity: 1;
-        transition: all 550ms 300ms;
-      }
-    }
-  }
+  z-index: 5;
 }
 
-@keyframes next-btn-close {
-  0% {
-    height: 46px;
-    width: 250px;
-    border-radius: 46px;
-    background-color: $jazzy;
-    margin-top: -5px;
-    margin-right: -5px;
-    line-height: 46px;
-  }
-  40% {
-    height: 46px;
-    line-height: 46px;
-    width: 250px;
-    border-radius: 46px;
-    margin-top: -5px;
-    margin-right: -5px;
-    background-color: $jean-jacket;
-  }
 
-  50% {
-    height: 36px;
-    line-height: 36px;
-    width: 240px;
-    border-radius: 36px;
-    margin-top: 0px;
-    margin-right: 0px;
 
-  }
-  80% {
-    width: 36px;
-    height: 36px;
-    line-height: 36px;
-    margin-top: 0px;
-    margin-right: 0px;
-  }
-
-  100% {
-    width: 36px;
-    height: 36px;
-    line-height: 36px;
-    margin-top: 0px;
-    margin-right: 0px;
-  }
-
-}
-
-@keyframes next-btn-active {
-  0% {
-    width: 36px;
-    height: 36px;
-    line-height: 36px;
-    border-radius: 36px;
-    margin-top: 0px;
-    margin-right: 0px;
-  }
-  50% {
-    height: 46px;
-    width: 46px;
-    line-height: 46px;
-    border-radius: 46px;
-    background-color: $jazzy;
-    margin-top: -5px;
-    margin-right: -5px;
-  }
-  100% {
-    height: 46px;
-    width: 250px;
-    border-radius: 46px;
-    background-color: $jazzy;
-    margin-top: -5px;
-    margin-right: -5px;
-  }
-}
-
-.resume__editor__content {
-  width: 400px;
-  transition: all 700ms 0ms;
-  opacity: 0;
-  position: relative;
-
-  .intro-photo {
-    margin-top: -100px;
-
-    + div {
-      margin-top: -32px;
-    }
-  }
-
-  .btn {
-    padding: 16px;
-    font-size: $font-size-xs;
-    cursor: pointer;
-    background: transparent;
-    border-color: $jean-jacket;
-    width: 100%;
-    position: relative;
-    border-radius: 8px;
-
-    &:after {
-      content: "";
-      display: block;
-      position: absolute;
-      left: 12px;
-      top: 12px;
-      width: 24px;
-      height: 24px;
-      background-image: url('../../img/UI/check-circle-gummy.svg');
-      transform: translateX(-16px) scale(.5);
-      transition: all 250ms cubic-bezier(0.240, 0.260, 0.245, 1.170);
-      visibility: hidden;
-      opacity: 0;
-    }
-
-    &:hover {
-      background-color: transparent;
-      border-color: $jazzy;
-      color: $jazzy;
-    }
-
-    &.-selected {
-      border-color: $gummy;
-      color: $gummy;
-      padding-left: 42px;
-
-      &:after {
-        opacity: 1;
-        visibility: visible;
-        transform: translateX(0px) scale(1);
-      }
-    }
-  }
-}
-
-.editor__question {
-  visibility: visible;
-  opacity: 1;
-  position: relative;
-  transform: translateX(0px);
-  transition: all 450ms 250ms;
-
-  &.-out {
-    opacity: 0;
-    visibility: hidden;
-    transform: translateX(-500px);
-    position: absolute;
-    transition: all 650ms;
-    top: 0;
-  }
-
-  &.-incoming {
-    opacity: 0;
-    visibility: hidden;
-    transform: translateX(500px);
-    position: absolute;
-    top: 0;
-  }
-}
-
+// resume Content section
 
 .resume__content {
   max-width: 100%;
   overflow-y: scroll;
   position: relative;
-
 }
 
 // edit mode
@@ -431,11 +164,6 @@
   .resume__editor {
     min-width: 480px;
     max-width: 620px;
-
-    > div {
-      transform: translatex(0px);
-      transition: all 850ms 200ms cubic-bezier(0.240, 0.260, 0.245, 1.170);
-    }
 
     .resume__editor__content {
       transform: translateY(0px);
