--- a/resources/assets/sass/components/_custom-forms.scss
+++ b/resources/assets/sass/components/_custom-forms.scss
@@ -26,6 +26,7 @@
   &:checked ~ .custom-control-indicator {
     color: $custom-control-checked-indicator-color;
     background-color: $custom-control-checked-indicator-bg;
+    background-position: center 50%;
     @include box-shadow($custom-control-checked-indicator-box-shadow);
   }
 
@@ -36,7 +37,7 @@
 
   &:active ~ .custom-control-indicator {
     color: $custom-control-active-indicator-color;
-    background-color: $custom-control-active-indicator-bg;
+    // background-color: $custom-control-active-indicator-bg;
     @include box-shadow($custom-control-active-indicator-box-shadow);
   }
 
@@ -70,7 +71,8 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: $custom-control-indicator-bg-size;
-  @include box-shadow($custom-control-indicator-box-shadow);
+  border: 1px solid $brand-primary;
+
 }
 
 // Checkboxes
@@ -80,10 +82,14 @@
 .custom-checkbox {
   .custom-control-indicator {
     @include border-radius($custom-checkbox-radius);
+    background-image: $custom-checkbox-checked-icon;
+    background-position: center -100%;
+    transition: background-position 0ms 150ms, background-color 150ms 0ms ease-in-out;
   }
 
   .custom-control-input:checked ~ .custom-control-indicator {
     background-image: $custom-checkbox-checked-icon;
+    transition: background-position 250ms 150ms, background-color 150ms 0ms ease-in-out;
   }
 
   .custom-control-input:indeterminate ~ .custom-control-indicator {
