--- a/resources/assets/sass/partials/_editor-step.scss
+++ b/resources/assets/sass/partials/_editor-step.scss
@@ -59,10 +59,10 @@
   width: 400px;
   position: relative;
   margin: auto;
-  text-align: center;
 
   .intro-photo {
     margin-bottom: -16px;
+    text-align: center;
   }
 }
 
@@ -72,7 +72,21 @@
 
 .editor__input {
   margin-top: 32px;
+}
 
+.editor__errors {
+  height: 1px;
+
+  p.has-error {
+    text-align: center;
+    font-family: $font-family-sans-serif;
+    font-size: $font-size-sm;
+    color: $gummy;
+  }
+}
+
+
+.radial-group {
   .btn {
     padding: 16px;
     font-size: $font-size-xs;
