--- a/resources/assets/sass/components/components.scss
+++ b/resources/assets/sass/components/components.scss
@@ -37,6 +37,7 @@
 
 // Components w/ JavaScript
 @import "modal";
+@import "multiselect";
 @import "tooltip";
 @import "popover";
 @import "carousel";
